fixing login fail issues

--- a/src/css/Firstpage.css
+++ b/src/css/Firstpage.css
@@ -1,53 +1,56 @@
 body {
-    background-color: red;
-    height: 100%;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif !important;
+  background-color: red;
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif !important;
 }
 .Logopart {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    text-align: center;
-    background-color: white;
-    margin: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  text-align: center;
+  background-color: white;
+  margin: 0;
 }
 .Firstpage {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 .logogmc {
-    padding-top: 40%;
+  padding-top: 40%;
 }
 .SingInpart1 {
-    background-color: red;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    height: 100vh;
+  background-color: red;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  height: 100vh;
 }
 input {
-    border-radius: 6px;
-    width: 300px;
-    height: 40px;
-    border-color: white !important;
-    border: none;
-    padding: 12px 20px;
+  border-radius: 6px;
+  width: 300px;
+  height: 40px;
+  border-color: white !important;
+  border: none;
+  padding: 12px 20px;
 }
 p {
-    color: white;
+  color: white;
 }
 label {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 button {
-    border-color: red;
-    color: black;
-    border: solid;
-    border-width: 1px;
-    background-color: white;
-    border-radius: 6px;
+  border-color: red;
+  color: black;
+  border: solid;
+  border-width: 1px;
+  background-color: white;
+  border-radius: 6px;
 }
-::placeholder{
-    color: black;
+::placeholder {
+  color: black;
+}
+.error {
+  color: red;
 }
