--- a/src/css/Firstpage.css
+++ b/src/css/Firstpage.css
@@ -1,5 +1,4 @@
 body {
-  background-color: red;
   height: 100%;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif !important;
@@ -20,7 +19,7 @@ body {
   padding-top: 40%;
 }
 .SingInpart1 {
-  background-color: red;
+  background-color: #c1213f;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -41,7 +40,7 @@ label {
   justify-content: space-between;
 }
 button {
-  border-color: red;
+  border-color: #c1213f;
   color: black;
   border: solid;
   border-width: 1px;
@@ -52,5 +51,5 @@ button {
   color: black;
 }
 .error {
-  color: red;
+  color: #c1213f;
 }
